[metadata]
name = pysedm
version = attr: pysedm.__version__
description = Simulating Transient in the sky and how to observe them
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Mickael Rigault
author_email = m.rigault@ipnl.in2p3.fr
license = Apache Software License
license_files = LICENSE
url = https://github.com/MickaelRigault/pysedm
keywords = astronomy, astrophysics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.10
install_requires =

    # basic
    numpy
    pandas
    scipy
    matplotlib
    
    # processing
    dask[distributed]
    iminuit>=2.0.0
    shapely
    scikit-image
    pyarrow
    pynverse
    
    # Astro
    astropy
    extinction
    sep
    ztfquery
    
    # internal
    pyifu>=0.13.0
    modefit>=0.4.2
    psfcube
    pycalspec
    astrobject>=0.10.0
    

scripts =
	bin/ccd_to_cube.py
	bin/extract_star.py
	bin/extractstar.py
	bin/extractstar_ab.py
	bin/cube_quality.py
	bin/pysedm_report.py
	bin/pysedm_pull.py
	bin/pysedm_io.py              
	bin/derive_wavesolution.py
	bin/quality_check.py
	bin/build_guider.py
	bin/rm_cubecr.py
    
[options.package_data]
pysedm = data/*

[options.extras_require]
docs = nbsphinx
tests = pytest; coverage

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1
